--- a/root.tex
+++ b/root.tex
@@ -41,7 +41,7 @@
 \crefname{figure}{fig}{figs}
 
 \title{\LARGE \bf
-Data-Efficient and Hardware  Decentralized Visual {SLAM}
+Data-Efficient and Hardware  Decentralized Monocular Visual {SLAM}
 }
 
 
