--- a/src/fpgaslam.bib
+++ b/src/fpgaslam.bib
@@ -1,6 +1,12 @@
-@article{Tech:2019360, 
+@misc{Tech:2019360, 
   title = {{Boards - Deephi Tech}}, 
   url = {http://www.deephi.com/technology/boards}, 
+  read = {false}, 
+  year = {2019}
+}
+@misc{KITTIGroundTruth, 
+  title = {KITTI GroundTruth}, 
+  url = {https://github.com/ZhangXiwuu/KITTI_GroundTruth}, 
   read = {false}, 
   year = {2019}
 }
@@ -256,3 +262,14 @@
   year = {2016}
 }
 
+#KITTI
+@article{geiger2013vision,
+  title={Vision meets robotics: The KITTI dataset},
+  author={Geiger, Andreas and Lenz, Philip and Stiller, Christoph and Urtasun, Raquel},
+  journal={The International Journal of Robotics Research},
+  volume={32},
+  number={11},
+  pages={1231--1237},
+  year={2013},
+  publisher={Sage Publications Sage UK: London, England}
+}
